--- a/fly.html
+++ b/fly.html
@@ -33,6 +33,7 @@
             quaternion._y + '; ' +
             quaternion._z;
 
+          document.querySelector('.text').setAttribute('text', {value: dirString});
           // orientation.multiplyScalar(0.1);
           // // rig.position.x += orientation.x;
           // // rig.position.y += orientation.y;
