--- a/fly.html
+++ b/fly.html
@@ -5,39 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Fly!</title>
-    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
 
     <script>
       AFRAME.registerComponent('pilot', {
         tick: function() {
-          const rig = document.querySelector('#rig').object3D;
+          const camera = document.querySelector('a-camera').object3D;
           const direction = new THREE.Vector3();
 
-          this.el.object3D.getWorldDirection(direction);
-          console.log('What I want');
-          console.log(direction);
+          camera.getWorldDirection(direction);
+          direction.multiplyScalar(0.1);
 
-          const quaternion = new THREE.Quaternion();
-          this.el.object3D.getWorldQuaternion(quaternion);
-
-          const rotation = new THREE.Euler();
-          rotation.setFromQuaternion(quaternion);
-
-          const orientation = new THREE.Vector3(0, 0, -1);
-          orientation.applyEuler(rotation);
-          console.log('What I have');
-          console.log(quaternion);
-          const dirString =
-            quaternion._x + '; ' +
-            quaternion._y + '; ' +
-            quaternion._z;
-
-          document.querySelector('.text').setAttribute('text', {value: dirString});
-          // orientation.multiplyScalar(0.1);
-          // // rig.position.x += orientation.x;
-          // // rig.position.y += orientation.y;
-          // rig.position.z += orientation.z;
+          this.el.object3D.position.x -= direction.x;
+          this.el.object3D.position.y -= direction.y;
+          this.el.object3D.position.z -= direction.z;
         }
       });
     </script>
@@ -45,15 +27,9 @@
   <body>
     <a-scene>
       <a-entity environment="preset: forest; dressingAmount: 500"></a-entity>
-      <a-entity
-        class="text"
-        text="value: test;"
-        scale="5 5 5"
-        position="0 2 -2"
-      ></a-entity>
 
-      <a-entity id="rig">
-        <a-camera pilot></a-camera>
+      <a-entity pilot>
+        <a-camera id="camera"></a-camera>
       </a-entity>
     </a-scene>
   </body>
