--- a/index.html
+++ b/index.html
@@ -4,72 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>VR-workshop</title>
-    <script src="https://aframe.io/releases/1.0.3/aframe.min.js"></script>
-    
+    <title>Fly!</title>
+    <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-environment-component/dist/aframe-environment-component.min.js"></script>
+    <script src="https://mixedreality.mozilla.org/ammo.js/builds/ammo.wasm.js"></script>
+    <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
 
     <script>
-      AFRAME.registerComponent('size-on-click', {
-        schema: {
-          scale: { default: "5"}
-        },
+      AFRAME.registerComponent('pilot', {
         init: function() {
-          const el = this.el;
-          const data = this.data;
-          el.addEventListener('click', function() {
-            el.setAttribute('scale', {x: data.scale, y: data.scale, z: data.scale});
-
-            setTimeout(function() {
-            el.setAttribute('scale', { x: 1, y: 1, z: 1 });
-          }, 1000);
+          this.el.addEventListener('collide', function(e) {
+            console.log(e);
           });
+        },
+        tick: function() {
+          const camera = document.querySelector('a-camera').object3D;
+          const direction = new THREE.Vector3();
+
+          camera.getWorldDirection(direction);
+          direction.multiplyScalar(0.1);
+
+          // this.el.object3D.position.x -= direction.x;
+          // this.el.object3D.position.y -= direction.y;
+          // this.el.object3D.position.z -= direction.z;
         }
       });
     </script>
   </head>
   <body>
-    <a-scene>
+    <a-scene physics="driver: ammo; debug: true">
+      <!-- <a-entity environment="preset: forest; dressingAmount: 500"></a-entity> -->
+      <a-plane
+        position="0 0 -4"
+        rotation="-90 0 0"
+        width="40"
+        height="40"
+        color="#7BC8A4"
+        ammo-body="type: static"
+        ammo-shape="type: box"
+      ></a-plane>
+      <a-sky color="blue"></a-sky>
       <a-box
-        class="clickable"
+        ammo-body="type: dynamic"
+        ammo-shape="type: box"
         color="red"
-        position="-2 2 -5"
-        rotation="0 45 45"
-        scale="1 1 1"
-        size-on-click="scale: 2"
+        position="5 10 -10"
       ></a-box>
 
-      <a-box
-        class="clickable"
-        color="green"
-        position="2 2 -5"
-        rotation="0 45 45"
-        scale="1 1 1"
-        size-on-click="scale: 3"
-      ></a-box>
+      <a-entity id="pilot" pilot>
+        <a-camera
+          id="camera"
+          position="0 1.6 0"
+          ammo-body="type: kinematic"
+          ammo-shape="type: box; fit: manual; halfExtents: 1 1 3.8; cylinderAxis: z; orientation: 0 180 0 1"
+        >
+          <a-entity
+            gltf-model="#planeModel"
+            scale="0.5 0.5 0.5"
+            position="2.2 -1 -1"
+            rotation="0 180 0"
+          ></a-entity>
+        </a-camera>
+      </a-entity>
 
-      <a-box
-        class="clickable"
-        color="blue"
-        position="0 4 -5"
-        rotation="0 45 45"
-        scale="1 1 1"
-        size-on-click
-      ></a-box>
-
-      <a-sky color="#222"></a-sky>
-
-      <a-camera>
+      <a-entity
+        position="-5 5 0"
+        ammo-body="type: kinematic"
+        ammo-shape="type: box; fit: manual; halfExtents: 1 1 3.5; offset: 0 0 -2 cylinderAxis: z; orientation: 0 180 0 1"
+      >
         <a-entity
-          animation__click="property: scale; startEvents: click; easing: easeInCubic; dur: 150; from: 0.1 0.1 0.1; to: 1 1 1"
-          animation__fusing="property: scale; startEvents: fusing; easing: easeInCubic; dur: 1500; from: 1 1 1; to: 0.1 0.1 0.1"
-          animation__mouseleave="property: scale; startEvents: mouseleave; easing: easeInCubic; dur: 500; to: 1 1 1"
-          cursor="fuse: true;"
-          raycaster="objects: .clickable"
-          material="color: cyan; shader: flat"
-          position="0 0 -3"
-          geometry="primitive: ring; radiusInner: 0.05; radiusOuter: 0.06"
+          gltf-model="#planeModel"
+          scale="0.5 0.5 0.5"
+          position="2.2 -1 -1"
+          rotation="0 180 0"
         ></a-entity>
-      </a-camera>
+      </a-entity>
+
+      <a-assets>
+        <a-asset-item id="planeModel" src="output/model.gltf"></a-asset-item>
+      </a-assets>
     </a-scene>
   </body>
 </html>
