--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
           camera.getWorldDirection(direction);
           direction.multiplyScalar(0.1);
 
-          // this.el.object3D.position.x -= direction.x;
-          // this.el.object3D.position.y -= direction.y;
-          // this.el.object3D.position.z -= direction.z;
+          this.el.object3D.position.x -= direction.x;
+          this.el.object3D.position.y -= direction.y;
+          this.el.object3D.position.z -= direction.z;
+        }
+      });
+
+      AFRAME.registerComponent('collides', {
+        init: function() {
+          this.el.addEventListener('collidestart', function(e) {
+            console.log(e.detail.targetEl.id);
+          });
         }
       });
     </script>
@@ -42,6 +50,7 @@
         color="#7BC8A4"
         ammo-body="type: static"
         ammo-shape="type: box"
+        id="floor"
       ></a-plane>
       <a-sky color="blue"></a-sky>
       <a-box
@@ -49,39 +58,42 @@
         ammo-shape="type: box"
         color="red"
         position="5 10 -10"
+        id="box"
       ></a-box>
 
       <a-entity id="pilot" pilot>
         <a-camera
           id="camera"
           position="0 1.6 0"
-          ammo-body="type: kinematic"
-          ammo-shape="type: box; fit: manual; halfExtents: 1 1 3.8; cylinderAxis: z; orientation: 0 180 0 1"
+          ammo-body="type: kinematic; emitCollisionEvents: true"
+          ammo-shape="type: cone; fit: manual; halfExtents: 1 2 2.7; offset: 0 -0.8 -0.3; cylinderAxis: z; orientation: 0 180 0 1"
+          collides
         >
           <a-entity
             gltf-model="#planeModel"
             scale="0.5 0.5 0.5"
-            position="2.2 -1 -1"
+            position="0 -1 0"
             rotation="0 180 0"
           ></a-entity>
         </a-camera>
       </a-entity>
 
       <a-entity
-        position="-5 5 0"
+        position="-2 2 1"
         ammo-body="type: kinematic"
-        ammo-shape="type: box; fit: manual; halfExtents: 1 1 3.5; offset: 0 0 -2 cylinderAxis: z; orientation: 0 180 0 1"
+        ammo-shape="type: cone; fit: manual; halfExtents: 1 2 2.7; offset: 0 -0.8 -0.3; cylinderAxis: z; orientation: 0 180 0 1"
+        id="tester"
       >
         <a-entity
           gltf-model="#planeModel"
           scale="0.5 0.5 0.5"
-          position="2.2 -1 -1"
+          position="0 -1 0"
           rotation="0 180 0"
         ></a-entity>
       </a-entity>
 
       <a-assets>
-        <a-asset-item id="planeModel" src="output/model.gltf"></a-asset-item>
+        <a-asset-item id="planeModel" src="models/Jet_01.gltf"></a-asset-item>
       </a-assets>
     </a-scene>
   </body>
