--- a/index.html
+++ b/index.html
@@ -12,11 +12,6 @@
 
     <script>
       AFRAME.registerComponent('pilot', {
-        init: function() {
-          this.el.addEventListener('collide', function(e) {
-            console.log(e);
-          });
-        },
         tick: function() {
           const camera = document.querySelector('a-camera').object3D;
           const direction = new THREE.Vector3();
@@ -24,9 +19,9 @@
           camera.getWorldDirection(direction);
           direction.multiplyScalar(0.1);
 
-          this.el.object3D.position.x -= direction.x;
-          this.el.object3D.position.y -= direction.y;
-          this.el.object3D.position.z -= direction.z;
+          // this.el.object3D.position.x -= direction.x;
+          // this.el.object3D.position.y -= direction.y;
+          // this.el.object3D.position.z -= direction.z;
         }
       });
 
@@ -37,12 +32,27 @@
           });
         }
       });
+
+      AFRAME.registerComponent('planes', {
+        init: function() {
+          const miniPlane = document.getElementById('tester');
+          const scene = document.querySelector('a-scene');
+          for (let i = 0; i < 20; i++) {
+            const clone = miniPlane.cloneNode(true);            
+            const newPosition = Math.floor(Math.random() * 20 - 10)
+            + " " + Math.floor(Math.random() * 20 - 10)
+            + " " + Math.floor(Math.random() * 20 - 10);
+            clone.setAttribute('position', newPosition);
+            scene.appendChild(clone);
+          }
+        }
+      });
     </script>
   </head>
   <body>
-    <a-scene physics="driver: ammo; debug: true">
+    <a-scene physics="driver: ammo; debug: true" planes>
       <!-- <a-entity environment="preset: forest; dressingAmount: 500"></a-entity> -->
-      <a-plane
+      <!-- <a-plane
         position="0 0 -4"
         rotation="-90 0 0"
         width="40"
@@ -51,15 +61,8 @@
         ammo-body="type: static"
         ammo-shape="type: box"
         id="floor"
-      ></a-plane>
+      ></a-plane> -->
       <a-sky color="blue"></a-sky>
-      <a-box
-        ammo-body="type: dynamic"
-        ammo-shape="type: box"
-        color="red"
-        position="5 10 -10"
-        id="box"
-      ></a-box>
 
       <a-entity id="pilot" pilot>
         <a-camera
@@ -81,12 +84,12 @@
       <a-entity
         position="-2 2 1"
         ammo-body="type: kinematic"
-        ammo-shape="type: cone; fit: manual; halfExtents: 1 2 2.7; offset: 0 -0.8 -0.3; cylinderAxis: z; orientation: 0 180 0 1"
+        ammo-shape="type: cone; fit: manual; halfExtents: 0.1 0.2 0.27; offset: 0 -1 -0.03; cylinderAxis: z; orientation: 0 180 0 1"
         id="tester"
       >
         <a-entity
           gltf-model="#planeModel"
-          scale="0.5 0.5 0.5"
+          scale="0.05 0.05 0.05"
           position="0 -1 0"
           rotation="0 180 0"
         ></a-entity>
