--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
       let speed = 0;
       AFRAME.registerComponent('start-game', {
         init: function() {
-          setTimeout(() => (speed = 0.5), 5000);
+          setTimeout(() => {
+            speed = 0.5;
+            const text = document.getElementById('playerText');
+            text.setAttribute('text', { value: null });
+          }, 5000);
         }
       });
 
@@ -40,11 +44,12 @@
             if (e.detail.targetEl.className) {
               score++;
               e.detail.targetEl.remove();
+              e.detail.targetEl.components.sound.playSound();
 
               if (document.querySelectorAll('.target').length === 0) {
                 const time = Math.round((new Date() - startTime - 5000) / 1000);
                 const timeText = `Your time: ${time} seconds`;
-                const text = document.getElementById('scoreText');
+                const text = document.getElementById('playerText');
                 text.setAttribute('text', { value: timeText });
               }
             }
@@ -57,7 +62,7 @@
           const target = document.getElementById('targetTemplate');
           const scene = document.querySelector('a-scene');
           const distance = 50;
-          for (let i = 0; i < 5; i++) {
+          for (let i = 0; i < 20; i++) {
             const clone = target.cloneNode(true);
             clone.removeAttribute('id');
             clone.className = 'target';
@@ -66,7 +71,7 @@
               ' ' +
               Math.floor(Math.random() * 2 * distance - distance) +
               ' ' +
-              Math.floor(Math.random() * 2 * distance - distance);
+              Math.floor(Math.random() * 2 * distance - distance - 200);
             clone.setAttribute('position', newPosition);
             scene.appendChild(clone);
           }
@@ -95,6 +100,7 @@
           ammo-body="type: kinematic; emitCollisionEvents: true"
           ammo-shape="type: cone; fit: manual; halfExtents: 1 2 2.7; offset: 0 -0.8 -0.3; cylinderAxis: z; orientation: 0 180 0 1"
           collides
+          sound="src: url(space.mp3); autoplay: true; loop: true;"
         >
           <a-entity
             gltf-model="#planeModel"
@@ -103,7 +109,11 @@
             rotation="0 180 0"
           ></a-entity>
 
-          <a-entity text="value: " id="scoreText" position="0 0 -1"></a-entity>
+          <a-entity
+            text="value: Game starts after 5 seconds"
+            id="playerText"
+            position="0 0 -1"
+          ></a-entity>
         </a-camera>
       </a-entity>
 
@@ -116,6 +126,7 @@
           ammo-shape="type: cylinder; fit: manual; halfExtents: 5 5 0.75; cylinderAxis: z;"
           position="0 0 -10"
           scale="5 5 5"
+          sound="src: url(crack.mp3); volume: 2"
         >
           <a-cylinder height="0.3" rotation="0 90 90" random-colour>
             <!-- One side facing target -->
